--- a/force-app/test/FFClauseEvaluatorTest.cls
+++ b/force-app/test/FFClauseEvaluatorTest.cls
@@ -1,8 +1,8 @@
 @isTest
 public class FFClauseEvaluatorTest {
 
-    private static FFClause clause(String attribute, String op, String value) {
-       FFClause clause = new FFClause();
+    private static FFModelsFeatures.Clause clause(String attribute, String op, String value) {
+       FFModelsFeatures.Clause clause = new FFModelsFeatures.Clause();
        clause.op = op;
        clause.values = new List<String> { value };
        clause.attribute = attribute;
@@ -26,7 +26,7 @@ public class FFClauseEvaluatorTest {
 
     @isTest
     public static void shouldBeFalseWhenOperationEmptyOrNull() {
-       FFClause emptyOp = new FFClause();
+       FFModelsFeatures.Clause emptyOp = new FFModelsFeatures.Clause();
        System.assertEquals(false, FFClauseEvaluator.evaluateClause(emptyOp, null, null));
        emptyOp.op = '';
        System.assertEquals(false, FFClauseEvaluator.evaluateClause(emptyOp, null, null));
@@ -34,7 +34,7 @@ public class FFClauseEvaluatorTest {
 
     @isTest
     public static void shouldBeFalseWhenValuesEmptyOrNull() {
-       FFClause emptyValues = new FFClause();
+       FFModelsFeatures.Clause emptyValues = new FFModelsFeatures.Clause();
        emptyValues.op = 'starts_with';
        System.assertEquals(false, FFClauseEvaluator.evaluateClause(emptyValues, null, null));
        emptyValues.values = new List<String>();
@@ -43,7 +43,7 @@ public class FFClauseEvaluatorTest {
 
     @isTest
     public static void shouldSegmentResultWhenOpIsSegmentMatch() {
-       FFClause segmentMatch = new FFClause();
+       FFModelsFeatures.Clause segmentMatch = new FFModelsFeatures.Clause();
        segmentMatch.op = 'segmentMatch';
        segmentMatch.values = new List<String> { 'test1' };
        MockStaticSegmentEvaluator trueSegmentEvaluator = new MockStaticSegmentEvaluator(true);
@@ -54,14 +54,14 @@ public class FFClauseEvaluatorTest {
 
     @isTest
     public static void shouldBeFalseWhenTargetHasNoAttributes() {
-       FFClause startsWith = FFClauseEvaluatorTest.clause('test', 'starts_with', '_test');
+       FFModelsFeatures.Clause startsWith = FFClauseEvaluatorTest.clause('test', 'starts_with', '_test');
        FFTarget target = new FFTarget();
        System.assertEquals(false, FFClauseEvaluator.evaluateClause(startsWith, target, null));
     }
 
     @isTest
     public static void shouldMatchAgainstTargetIdentifier() {
-       FFClause startsWith = FFClauseEvaluatorTest.clause('identifier', 'starts_with', '_test');
+       FFModelsFeatures.Clause startsWith = FFClauseEvaluatorTest.clause('identifier', 'starts_with', '_test');
        FFTarget target = new FFTarget();
        target.attributes = new Map<String, Object> {
            'identifier' => 'not matched'
@@ -72,7 +72,7 @@ public class FFClauseEvaluatorTest {
 
     @isTest
     public static void shouldMatchAgainstTargetName() {
-       FFClause startsWith = FFClauseEvaluatorTest.clause('name', 'starts_with', '_test');
+       FFModelsFeatures.Clause startsWith = FFClauseEvaluatorTest.clause('name', 'starts_with', '_test');
        FFTarget target = new FFTarget();
        target.attributes = new Map<String, Object> {
            'name' => 'not matched'
@@ -83,7 +83,7 @@ public class FFClauseEvaluatorTest {
 
     @isTest
     public static void shouldMatchAgainstNonStringAttribute() {
-       FFClause startsWith = FFClauseEvaluatorTest.clause('att', 'starts_with', '123');
+       FFModelsFeatures.Clause startsWith = FFClauseEvaluatorTest.clause('att', 'starts_with', '123');
        FFTarget target = new FFTarget();
        target.attributes = new Map<String, Object> {
            'att' => 1234
@@ -93,7 +93,7 @@ public class FFClauseEvaluatorTest {
 
     @isTest
     public static void shouldBeFalseWhenAttributeIsNull() {
-       FFClause startsWith = FFClauseEvaluatorTest.clause('att', 'starts_with', '123');
+       FFModelsFeatures.Clause startsWith = FFClauseEvaluatorTest.clause('att', 'starts_with', '123');
        FFTarget target = new FFTarget();
        target.attributes = new Map<String, Object> {
            'att' => null
@@ -103,7 +103,7 @@ public class FFClauseEvaluatorTest {
     
     @isTest
     public static void shouldBeFalseWhenTargetAttDoesNotExist() {
-       FFClause startsWith = FFClauseEvaluatorTest.clause('test', 'starts_with', '_test');
+       FFModelsFeatures.Clause startsWith = FFClauseEvaluatorTest.clause('test', 'starts_with', '_test');
        FFTarget target = new FFTarget();
        target.attributes = new Map<String, Object> {
            'not_test' => '_test'
@@ -113,7 +113,7 @@ public class FFClauseEvaluatorTest {
 
     @isTest
     public static void shouldBeTrueWhenStartsWithValue() {
-       FFClause startsWith = FFClauseEvaluatorTest.clause('test', 'starts_with', '_test');
+       FFModelsFeatures.Clause startsWith = FFClauseEvaluatorTest.clause('test', 'starts_with', '_test');
        FFTarget target = new FFTarget();
        target.attributes = new Map<String, Object> {
            'test' => '_testxyz'
@@ -123,7 +123,7 @@ public class FFClauseEvaluatorTest {
 
     @isTest
     public static void shouldBeFalseWhenDoesNotStartWithValue() {
-       FFClause clause = FFClauseEvaluatorTest.clause('test', 'starts_with', '_test');
+       FFModelsFeatures.Clause clause = FFClauseEvaluatorTest.clause('test', 'starts_with', '_test');
        FFTarget target = new FFTarget();
        target.attributes = new Map<String, Object> {
            'test' => 'not_test'
@@ -133,7 +133,7 @@ public class FFClauseEvaluatorTest {
 
     @isTest
     public static void shouldBeTrueWhenEndsWithValue() {
-       FFClause clause = FFClauseEvaluatorTest.clause('test', 'ends_with', '_test');
+       FFModelsFeatures.Clause clause = FFClauseEvaluatorTest.clause('test', 'ends_with', '_test');
        FFTarget target = new FFTarget();
        target.attributes = new Map<String, Object> {
            'test' => 'xyz_test'
@@ -143,7 +143,7 @@ public class FFClauseEvaluatorTest {
 
     @isTest
     public static void shouldBeFalseWhenDoesntEndWithValue() {
-       FFClause clause = FFClauseEvaluatorTest.clause('test', 'ends_with', '_test');
+       FFModelsFeatures.Clause clause = FFClauseEvaluatorTest.clause('test', 'ends_with', '_test');
        FFTarget target = new FFTarget();
        target.attributes = new Map<String, Object> {
            'test' => 'xyz_testxyz'
@@ -153,7 +153,7 @@ public class FFClauseEvaluatorTest {
 
     @isTest
     public static void shouldBeTrueWhenPatternMatchesValue() {
-       FFClause clause = FFClauseEvaluatorTest.clause('test', 'match', '^[a-z.]+@[a-z]+\\.[a-z]{2,}$');
+       FFModelsFeatures.Clause clause = FFClauseEvaluatorTest.clause('test', 'match', '^[a-z.]+@[a-z]+\\.[a-z]{2,}$');
        FFTarget target = new FFTarget();
        target.attributes = new Map<String, Object> {
            'test' => 'some.one@harness.io'
@@ -163,7 +163,7 @@ public class FFClauseEvaluatorTest {
 
     @isTest
     public static void shouldBeFalseWhenDoesntPatternMatchesValue() {
-       FFClause clause = FFClauseEvaluatorTest.clause('test', 'match', '^[a-z.]+@[a-z]+\\.[a-z]{2,}$');
+       FFModelsFeatures.Clause clause = FFClauseEvaluatorTest.clause('test', 'match', '^[a-z.]+@[a-z]+\\.[a-z]{2,}$');
        FFTarget target = new FFTarget();
        target.attributes = new Map<String, Object> {
            'test' => '2302899023klsdjflkdsj'
@@ -173,7 +173,7 @@ public class FFClauseEvaluatorTest {
 
     @isTest
     public static void shouldBeTrueWhenContainsValue() {
-       FFClause clause = FFClauseEvaluatorTest.clause('test', 'contains', 'xyz');
+       FFModelsFeatures.Clause clause = FFClauseEvaluatorTest.clause('test', 'contains', 'xyz');
        FFTarget target = new FFTarget();
        target.attributes = new Map<String, Object> {
            'test' => '123xyz456'
@@ -183,7 +183,7 @@ public class FFClauseEvaluatorTest {
 
     @isTest
     public static void shouldBeFalseWhenDoesntContainValue() {
-       FFClause clause = FFClauseEvaluatorTest.clause('test', 'contains', 'xyz');
+       FFModelsFeatures.Clause clause = FFClauseEvaluatorTest.clause('test', 'contains', 'xyz');
        FFTarget target = new FFTarget();
        target.attributes = new Map<String, Object> {
            'test' => '123xy456'
@@ -193,7 +193,7 @@ public class FFClauseEvaluatorTest {
 
     @isTest
     public static void shouldBeTrueWhenEqualToValue() {
-       FFClause clause = FFClauseEvaluatorTest.clause('test', 'equal', 'xXyYzZ');
+       FFModelsFeatures.Clause clause = FFClauseEvaluatorTest.clause('test', 'equal', 'xXyYzZ');
        FFTarget target = new FFTarget();
        target.attributes = new Map<String, Object> {
            'test' => 'XxyYZz' // Differing case to clause
@@ -203,7 +203,7 @@ public class FFClauseEvaluatorTest {
 
     @isTest
     public static void shouldBeFalseWhenNotEqualToValue() {
-       FFClause clause = FFClauseEvaluatorTest.clause('test', 'equal', 'xXyYzZ');
+       FFModelsFeatures.Clause clause = FFClauseEvaluatorTest.clause('test', 'equal', 'xXyYzZ');
        FFTarget target = new FFTarget();
        target.attributes = new Map<String, Object> {
            'test' => '123456'
@@ -213,7 +213,7 @@ public class FFClauseEvaluatorTest {
 
     @isTest
     public static void shouldBeTrueWhenExactlyEqualToValue() {
-       FFClause clause = FFClauseEvaluatorTest.clause('test', 'attrStr', 'xXyYzZ');
+       FFModelsFeatures.Clause clause = FFClauseEvaluatorTest.clause('test', 'attrStr', 'xXyYzZ');
        FFTarget target = new FFTarget();
        target.attributes = new Map<String, Object> {
            'test' => 'xXyYzZ' // Same case to clause
@@ -223,7 +223,7 @@ public class FFClauseEvaluatorTest {
 
     @isTest
     public static void shouldBeFalseWhenNotExactlyEqualToValue() {
-       FFClause clause = FFClauseEvaluatorTest.clause('test', 'attrStr', 'xXyYzZ');
+       FFModelsFeatures.Clause clause = FFClauseEvaluatorTest.clause('test', 'attrStr', 'xXyYzZ');
        FFTarget target = new FFTarget();
        target.attributes = new Map<String, Object> {
            'test' => 'XxyYZz'  // Differing case to clause
@@ -234,7 +234,7 @@ public class FFClauseEvaluatorTest {
 
     @isTest
     public static void shouldBeTrueWhenInValues() {
-       FFClause clause = FFClauseEvaluatorTest.clause('test', 'in', 'xXyYzZ');
+       FFModelsFeatures.Clause clause = FFClauseEvaluatorTest.clause('test', 'in', 'xXyYzZ');
        clause.values.add('123456');
        FFTarget target = new FFTarget();
        target.attributes = new Map<String, Object> {
@@ -245,7 +245,7 @@ public class FFClauseEvaluatorTest {
 
     @isTest
     public static void shouldBeFalseWhenNotInValues() {
-       FFClause clause = FFClauseEvaluatorTest.clause('test', 'in', 'xXyYzZ');
+       FFModelsFeatures.Clause clause = FFClauseEvaluatorTest.clause('test', 'in', 'xXyYzZ');
        clause.values.add('2392382039');
        FFTarget target = new FFTarget();
        target.attributes = new Map<String, Object> {
@@ -256,7 +256,7 @@ public class FFClauseEvaluatorTest {
 
     @isTest
     public static void shouldBeFalseWhenInvalidOperation() {
-       FFClause clause = FFClauseEvaluatorTest.clause('test', 'notAnOperation', 'xXyYzZ');
+       FFModelsFeatures.Clause clause = FFClauseEvaluatorTest.clause('test', 'notAnOperation', 'xXyYzZ');
        FFTarget target = new FFTarget();
        target.attributes = new Map<String, Object> {
            'test' => '123456'
