--- a/force-app/main/classes/FFFeatureVariationDefaultsEvaluator.cls
+++ b/force-app/main/classes/FFFeatureVariationDefaultsEvaluator.cls
@@ -1,9 +1,6 @@
 public class FFFeatureVariationDefaultsEvaluator implements FFFeatureVariationEvaluator {
 
     public String evaluateVariation(FFModelsFeatures.FeatureConfig featureConfig, FFTarget target) {
-       FFModelsFeatures.Serve defaultServe = featureConfig.defaultServe;
-       String distributedVariation = FFDistributionEvaluator.variationFromDistribution(defaultServe);
-       if(distributedVariation != null) return distributedVariation;
-       return defaultServe.variation;
+       return FFDistributionEvaluator.variationFromServe(featureConfig.defaultServe);
     }
 }
