--- a/force-app/main/classes/FFFeatureVariationDefaultsEvaluator.cls
+++ b/force-app/main/classes/FFFeatureVariationDefaultsEvaluator.cls
@@ -1,6 +1,6 @@
 public class FFFeatureVariationDefaultsEvaluator implements FFFeatureVariationEvaluator {
 
     public String evaluateVariation(FFModelsFeatures.FeatureConfig featureConfig, FFTarget target) {
-       return FFDistributionEvaluator.variationFromServe(featureConfig.defaultServe);
+       return FFDistributionEvaluator.variationFromServe(featureConfig.defaultServe, target);
     }
 }
