[FFM-7812]: Fix parsing of JSON for large integer values

--- a/force-app/main/classes/FFModelsFeatures.cls
+++ b/force-app/main/classes/FFModelsFeatures.cls
@@ -103,9 +103,9 @@ public abstract class FFModelsFeatures {
         //OPTIONAL
         public List<Clause> rules { get; set; }
         //OPTIONAL
-        public Integer createdAt { get; set; }
+        public Long createdAt { get; set; }
         //OPTIONAL
-        public Integer modifiedAt { get; set; }
+        public Long modifiedAt { get; set; }
         //OPTIONAL
         public Integer version { get; set; }
     } 
