--- a/force-app/test/FFMockCache.cls
+++ b/force-app/test/FFMockCache.cls
@@ -3,8 +3,30 @@ public class FFMockCache implements FFCache {
     public FFMockCache() {
         this.cache = new Map<String, Object>();
     }
-    public void put(String key, Object value, Integer ttl) { this.cache.put(key, value); }
-    public Object get(String key) { return this.cache.get(key);}
+
+    public void putFeatures(List<FFModelsFeatures.FeatureConfig> features, Integer ttl) {
+        this.cache.put('features', features);
+    }
+
+    public void putSegments(List<FFModelsFeatures.TargetSegment> segments, Integer ttl) {
+        this.cache.put('segments', segments);
+    }
+
+    public void putAuth(String key, Map<String, String> authData, Integer ttl) {
+        this.cache.put('auth'+key, authData);
+    }
+
+    public List<FFModelsFeatures.FeatureConfig> getFeatures() {
+        return (List<FFModelsFeatures.FeatureConfig>) this.cache.get('features');
+    }
+
+    public List<FFModelsFeatures.TargetSegment> getSegments() {
+        return (List<FFModelsFeatures.TargetSegment>) this.cache.get('segments');
+    }
+
+    public Map<String, String> getAuth(String key) {
+        return (Map<String, String>) this.cache.get('auth'+key);
+    }
+
     public String getCacheNamespace() { return 'TEST'; }
-    public String getCachePartition() { return 'TEST'; }
 }
